# ChatyGPT

./: .gitignore  Arrancar ChatyGPT.bat  Diagnosticar adjuntos.bat  README.md  diagnostico-adjuntos.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
apps/desktop/: index.html
apps/desktop/src/: App.tsx  domain.test.ts  domain.ts  platform.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_attachments.sql  0003_attachment_sources.sql  0004_memory_searches.sql
apps/desktop/src-tauri/queries/: recover_non_terminal_tasks.sql
apps/desktop/src-tauri/src/: attachment_runtime.rs  error.rs  export.rs  lib.rs  main.rs  task_runtime.rs
apps/desktop/src-tauri/src/broker/: contracts.rs  mod.rs
apps/desktop/src-tauri/src/db/: mod.rs
contracts/broker/2.5/: single-task.request.json
docs/: ARCHITECTURE.md  PHASE_0_VERIFICATION.md  PHASE_1_VERIFICATION.md  PHASE_2_VERIFICATION.md
scripts/: diagnose_attachments.py  generate_app_icons.py  verify_broker.py
services/automation/: README.md
tests/: test_broker_probe.py  test_foundations.py
