[package]
name = "chatygpt"
version = "0.1.0"
description = "Cliente de escritorio local-first para AI Broker"
authors = ["ChatyGPT contributors"]
edition = "2021"

[lib]
name = "chatygpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["fs", "time"] }
sha2 = "0.10"
mime_guess = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
